# pip-r

./: .pdbrc  README.md  notes.md  pyproject.toml
etc/: example.py  spec.ebnf
pip_r/: __init__.py  cli.py  exceptions.py  file.py  grammar.py  line.py  package.py  parser.py  preprocess.py  renderer.py  status.py
tests/: conftest.py  stubs.py  test_file.py  test_grammar.py  test_line.py  test_package.py  test_parser.py  test_parsing.py  test_preprocess.py  test_renderer.py  test_status.py
tests/fixtures/: constraints.txt  error.txt  example.txt  line-continue.txt  other.txt  packages.txt  reqs.txt  simple.txt
